<resources>
    <string name="app_name" translatable="false">ShopMobile</string>
    <string name="connecting_to_server">connecting to server</string>
    <string name="connection_settings">connection settings</string>
    <string name="back">back</string>
    <string name="server_address">server address</string>
    <string name="server_port">server port</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="database">database</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="check_quantity_reserve">check quantity / reserve</string>
    <string name="transfer_to_office">transfer to office</string>
    <string name="scancode">scancode</string>
    <string name="name">name</string>
    <string name="price">price</string>
    <string name="created">created</string>
    <string name="end_date">end date</string>
    <string name="apply">apply</string>
    <string name="cancel">cancel</string>
    <string name="save">save</string>
    <string name="store">store</string>
    <string name="current_qty">in stock</string>
    <string name="reserved_qty">reservation</string>
    <string name="additional_information">additional information</string>
    <string name="store_id">store code</string>
    <string name="documents">documents</string>
    <string name="create">create</string>
    <string name="image">image</string>
    <string name="create_document">create document</string>
    <string name="edit_document">edit document</string>
    <string name="store_input">store input</string>
    <string name="store_output">store output</string>
    <string name="store_input_document">store input document</string>
    <string name="store_output_document">store output document</string>
    <string name="store_movement_document">store movement document</string>
    <string name="close">close</string>
    <string name="image_not_exists">image not exists</string>
    <string name="invalid_doc_type">invalid type of document</string>
    <string name="network_error">network error</string>
    <string name="get_data">get data</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="confirm_to_delete">confirm to delete</string>
    <string name="saved">saved</string>
    <string name="hide_quantity_from_store">hide quantity from store</string>
</resources>